# ChangeLog for net-firewall/iptables
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-firewall/iptables/ChangeLog,v 1.209 2010/03/11 06:15:37 pva Exp $

*iptables-1.4.7 (11 Mar 2010)

  11 Mar 2010; Peter Volkov <pva@gentoo.org> +iptables-1.4.7.ebuild:
  Version bump.

*iptables-1.4.6 (18 Dec 2009)

  18 Dec 2009; Mike Frysinger <vapier@gentoo.org> +iptables-1.4.6.ebuild:
  Version bump #297365 by Milos Ivanovic.

*iptables-1.4.5 (23 Sep 2009)

  23 Sep 2009; Mike Frysinger <vapier@gentoo.org> +iptables-1.4.5.ebuild:
  Version bump #285519 by init_6.

  31 Aug 2009; Brent Baude <ranger@gentoo.org> iptables-1.4.3.2.ebuild:
  stable ppc64, bug 274403

  27 Aug 2009; Mike Frysinger <vapier@gentoo.org> iptables-1.3.8-r3.ebuild,
  iptables-1.4.0-r1.ebuild, iptables-1.4.2-r2.ebuild,
  iptables-1.4.3.2.ebuild, iptables-1.4.4.ebuild:
  Move to common epatch code.

  27 Jul 2009; Mike Frysinger <vapier@gentoo.org> iptables-1.4.4.ebuild:
  Add USE=ipv6 support by Christian Affolter #277366.

  23 Jul 2009; Raúl Porcel <armin76@gentoo.org> iptables-1.4.3.2.ebuild:
  arm/ia64/m68k/s390/sh/sparc stable wrt #274403

  15 Jul 2009; nixnut <nixnut@gentoo.org> iptables-1.4.3.2.ebuild:
  ppc stable #274403

  18 Jun 2009; Thomas Anderson <gentoofan23@gentoo.org>
  iptables-1.4.3.2.ebuild:
  stable amd64, bug 274403

  17 Jun 2009; Christian Faulhammer <fauli@gentoo.org>
  iptables-1.4.3.2.ebuild:
  stable x86, bug 274403

  17 Jun 2009; Jeroen Roovers <jer@gentoo.org> iptables-1.4.3.2.ebuild:
  Stable for HPPA (bug #274403).

*iptables-1.4.4 (17 Jun 2009)

  17 Jun 2009; Peter Volkov <pva@gentoo.org> -iptables-1.4.1.1.ebuild,
  -iptables-1.4.2.ebuild, -iptables-1.4.2-r1.ebuild, +iptables-1.4.4.ebuild:
  Version bump, bug #274368, thank Wojciech Porczyk for report.

  16 Jun 2009; Tobias Klausmann <klausman@gentoo.org>
  iptables-1.4.3.2.ebuild:
  Stable on alpha, bug #274403

*iptables-1.4.3.2 (06 Apr 2009)
