@@ -8,6 +8,6 @@ DIST iptables-1.4.7.tar.bz2 462420 RMD160 fc3c0e1fa2eadd2819b83eececa87334e8956d
 EBUILD iptables-1.4.3.2.ebuild 1325 RMD160 46c2121e30c3bb1cc1065ffda130531ae87cdd4f SHA1 9a4e288c896b20eadae64b3f8a5eddb47e055dc7 SHA256 d0f9f6287270b9aeb6a92156c63d4f090186efd409bed6d3323c007e5714a6c4
 EBUILD iptables-1.4.5.ebuild 1409 RMD160 7f6d29469d03248cdd5025c9ca30a93ab61d273b SHA1 0c5d92a44abeaef72674763a98bdc97b79aa9417 SHA256 b84a9045667fbd694347c80abe4ff91ba290c5758e81e62d5a8f9bae02359794
 EBUILD iptables-1.4.6.ebuild 1409 RMD160 6160c966db5c675ce6b71ce9ac271f4dbe276944 SHA1 183dd1085048901fe31c8198141920b77f0a37cb SHA256 c5dfed3ba3d5b89607ae55296f2e94748e80ac6c717b6a6e9e42dab79955266e
-EBUILD iptables-1.4.7.ebuild 1405 RMD160 146d183d24af1a98b8ab921266b6e9948e5921aa SHA1 cd9344d8765e1f75671b482aa5da71729c68b90d SHA256 4d117e56778c7f067bb43de81c1417bcecea6b1858845593e57781550d3cd0e4
-MISC ChangeLog 38351 RMD160 fe329ce0c4d82aa722a7141baec142f95fa81600 SHA1 456a6c74f7b373600b46162babf288ef6dda9308 SHA256 b96857b833df850449c88d734aa0ee72e355a8acba475b5057f1ab7815df09e7
+EBUILD iptables-1.4.7.ebuild 1508 RMD160 6893caabf8179547030981bf6bb7814d8ff605b7 SHA1 84abcb6ab8d48dc995b71838779c82e0c9e8cc58 SHA256 72962815748eb80eeffd6562800783ee0439f6564922cf9a433b55ea9c38934c
+MISC ChangeLog 38484 RMD160 ff9c5c0024a4f78448d77ad5319663f7f0ed3a35 SHA1 e8f096ba8d0791dd0275e51beb6ed1b2c1589de9 SHA256 c806e968b2466b4897c806b3f5d55d95c94c2895066e44aed553ce9101cb671e
 MISC metadata.xml 971 RMD160 65a45b6c4fdef8d72ad018d2a5a05bb48f25f582 SHA1 6d4aeaed5a8d23ffb0bb4471a81959b1f925c658 SHA256 d590b0460c0c22a6a6a6524f5b0adf660e26414dd7fcd5c3e6a3cfca2ae6dd43
