@@ -1,6 +1,9 @@
 # ChangeLog for net-firewall/iptables
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-firewall/iptables/ChangeLog,v 1.209 2010/03/11 06:15:37 pva Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-firewall/iptables/ChangeLog,v 1.210 2010/04/21 16:45:55 robbat2 Exp $
+
+  21 Apr 2010; Robin H. Johnson <robbat2@gentoo.org> iptables-1.4.7.ebuild:
+  Bug #316369: install iptables-apply util as well.
 
 *iptables-1.4.7 (11 Mar 2010)
 
